Breyti link a nyskraning

--- a/Final/templates/login.html
+++ b/Final/templates/login.html
@@ -114,7 +114,7 @@
     </form>
 
     <div class="ui message">
-      Skrá Nýjan Notanda? <a href="nyskraning.html">Nýskráning</a><br>
+      Skrá Nýjan Notanda? <a href="{{ url_for('new') }}">Nýskráning</a><br>
       Tilbaka <a href="{{ url_for('home') }}">Forsíða</a>
     </div>
   </div>
